Fix - gap between 1st section cards

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ h3{
     border: 1px solid #b6b6b6;
 }
 
-.card-row,.box-card .col-4{
+.card-row .col-4,.box-card .col-4{
     flex-basis: calc(90% /3);
 }
 
